# adventofcode

./: .gitignore  .travis.yml  LICENSE  README.md  day1.py  day2.py  day5.py  day8.py  day9.py  runall.sh
2015/: runall.sh
2016/: .gitignore  Cargo.toml  Makefile  README.md
2017/: README.md  time-all.sh
2018/: Cargo.toml  README.md
2019/: .gitignore  CMakeLists.txt  README.md  requirements.txt
2019/aoc2019/: __main__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  intcode.py
2019/inputs/: 01.txt  03.txt  05.txt  06.txt  08.txt  10.txt  12.txt  13.txt  15.txt  16.txt  17.txt  18.txt  21.txt  22.txt  23.txt  24.txt  25.txt
2019/src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  days.hpp  implementations.cpp  implementations.hpp  point.hpp  runner.cpp  solutions.cpp  solutions.hpp  utils.cpp  utils.hpp
2019/src/day17/: route-map.py
2019/tests/: day16.py  test_day01.py  test_day03.py  test_day04.py  test_day06.py  test_day07.py  test_day10.py  test_day12.py  test_day14.py  test_day16.py  test_day18.py  test_day20.py  test_day22.py  test_day24.py  test_intcode.cpp  test_intcode.py  test_solutions.cpp
2019/tests/samples/: 03-2-1.in  03-2-2.in  03-2-3.in  12-2-2.out  14-2-1.in  14-2-2.in  14-2-3.in
2020/: .gitignore  Cargo.toml  README.md  create_timing_plots.py  download.sh
2020/benches/: days.rs
2020/inputs/: 01.txt  15.txt  21.txt  25.txt
2020/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2021/: Cargo.toml  README.md  create_timing_plots.py
2021/benches/: days.rs
2021/inputs/: 06.txt  09.txt  10.txt  18.txt  23.txt  24.txt  25.txt
2021/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2022/: Cargo.toml  README.md
2022/benches/: days.rs
2022/inputs/: 08.txt  13.txt  18.txt  20.txt  23.txt  25.txt
2022/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2022/src/samples/: 19.txt
2023/: Cargo.toml
2023/benches/: days.rs
2023/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
2023/src/samples/: 08.3.txt
2024/: pyproject.toml
2024/aoc/: __main__.py
2024/aoc/days/: __init__.py
2024/bonus/: 24todot.py  README.md  main.tf  tests.tftest.hcl
2024/bonus/day01/: main.tf  sample.tftest.hcl
2024/bonus/day02/: main.tf  sample.tftest.hcl
2024/bonus/day02/is_savable/: main.tf
2024/bonus/day02/is_valid/: main.tf
2024/bonus/day03/: main.tf
2024/bonus/day03/should_execute/: main.tf
2024/bonus/day04/: main.tf
2024/bonus/day04/check_point/: main.tf
2024/bonus/day04/check_point/check_x_mas/: main.tf
2024/bonus/day04/check_point/check_xmas/: main.tf
2024/bonus/day05/: main.tf
2024/bonus/day05/is_correct/: main.tf
2024/bonus/day08/: main.tf
2024/bonus/day08/freq/: main.tf
2024/bonus/day08/freq/pair/: main.tf
2024/bonus/day11/: main.tf  steps.tf
2024/bonus/day11/step/: main.tf
2024/bonus/day11/transform/: main.tf
2024/bonus/day13/: main.tf
2024/bonus/day13/solve/: main.tf
2024/bonus/day14/: main.tf
2024/bonus/day19/: main.tf
2024/bonus/day25/: main.tf
2024/src/aoc/: __main__.py
2024/src/aoc/days/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2024/tests/: __init__.py  test_day01.py  test_day02.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py  test_day3.py  test_day4.py  test_day5.py  test_harness.py
2024/tests/samples/: 04.1.txt
2025/: README.md
day-01/: solution.py
day-02/: solution.py
day-03/: solution.py
day-04/: input.txt  solution.py
day-05/: solution.py
day-06/: part1.py  part2.py  solution.py
day-07/: solution.py
day-08/: solution.py
day-09/: solution.py
day-10/: solution.py
day-11/: solution.py
day-12/: solution.py
day-13/: solution.py
day-17/: solution.py
day-19/: solution.py
day-20/: solution.py
day-21/: solution.py
day-22/: solution.py
day-23/: solution.py
(+182 files in other folders)
