[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Bert Peters <bert@bertptrs.nl>"]
edition = "2018"

[dependencies]
bytecount = "0.6"
clap = "3.0.0-beta.2"
itertools = "0.9"
num-integer = "0.1"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "days"
harness = false
