[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.1"
strength_reduce = "0.2.4"

[dev-dependencies]
criterion = "0.4.0"

[profile.release]
# Keep debug information in release for better flamegraphs
debug = true

[profile.bench]
# And same for benchmarking
debug = true

[[bench]]
name = "days"
harness = false
