[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
nom = "7.1.3"
regex = "1.10.2"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
# Keep debug information in release for better flamegraphs
debug = true

[[bench]]
name = "days"
harness = false
