[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
linfa-linalg = "0.1.0"
linked-hash-map = "0.5.6"
ndarray = "0.15.6"
nom = "7.1.3"
num-integer = "0.1.45"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
# Keep debug information in release for better flamegraphs
debug = true

[[bench]]
name = "days"
harness = false
