[project]
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024 solutions programs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "numpy>=2.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.uv]
package = true

[tool.ruff.lint]
select = ["F", "E", "I"]

[tool.mypy]
strict = true
